# pin

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: build.yml  release.yml
installer/: pin.iss
scripts/: gen-license-rtf.ps1
src/: app.rs  autostart.rs  cursor.rs  lib.rs  main.rs  overlay.rs  pinned.rs  resources.rs  selection.rs  tray.rs  win.rs
tests/: integration_pin.rs
wix/: License.rtf  main.wxs  pin-autostart.ini  pin.ini  ui.wxs
