[package]
name = "pin"
version = "0.1.0"
edition = "2021"
build = "build.rs"
license = "AGPL-3.0-or-later"
description = "Tiny Windows system-tray utility for pinning any window on top."
readme = "README.md"
authors = ["sqhh99 <sqhh99@outlook.com>"]

[dependencies]
anyhow = "1"
thiserror = "1"
log = "0.4"
env_logger = "0.11"
image = { version = "0.25", default-features = false, features = ["png"] }
once_cell = "1"

[target.'cfg(windows)'.dependencies]
tray-icon = "0.19"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_HiDpi",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_Security",
] }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[profile.release]
lto = true
strip = true
opt-level = "z"
codegen-units = 1
